src/styles/typography.css
@import './global.css';

@layer base {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply text-balance;
  }

  p {
    @apply text-pretty;
  }
}

@layer components {
  .prose {
    @apply text-foreground text-base leading-7;
    @apply [&>link[rel="stylesheet"]+*]:mt-0! [&>link[rel="stylesheet"]+*>*]:mt-0;

    :where(p):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply text-foreground my-3;
    }

    :where(h1, h2, h3, h4, h5, h6):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply text-foreground scroll-mt-32 font-medium xl:scroll-mt-20;
    }

    /* Don't use an <h1> in your posts, one is already generated in blog/[...id].astro */
    :where(h1):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply mt-8 mb-6 text-4xl font-black;
    }

    :where(h2):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply mt-8 mb-4 text-2xl font-bold;
    }

    :where(h3):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply mt-8 mb-4 text-xl font-semibold italic;
    }

    :where(h4):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply mt-7 mb-3 text-lg font-medium uppercase;
    }

    :where(h5, h6):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply mt-5 mb-3 uppercase;
    }

    :where(a):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply text-primary visited:text-foreground hover:text-accent decoration-muted-foreground hover:decoration-accent font-medium wrap-break-word underline underline-offset-[3px] transition-colors;
    }

    :where(strong):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply text-foreground font-medium;
    }

    :where(ul):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply marker:text-foreground/30 my-5 ml-6 list-disc [&>li]:mt-2;
    }

    :where(ol):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply marker:text-foreground/30 my-5 ml-6 list-decimal [&>li]:mt-2;
      @apply [&[type='A']]:list-[upper-alpha] [[type='I']]:list-[upper-roman] [[type='a']]:list-[lower-alpha] [[type='i']]:list-[lower-roman];
    }

    :where(li):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply text-foreground/80 pl-2 [&>p]:my-0;
    }

    :where(ul ul, ol ol, ul ol, ol ul):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply marker:text-foreground/30 my-2 ml-6;
    }

    :where(code):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply bg-muted/50 text-foreground relative rounded-sm px-[0.3rem] py-[0.2rem] text-sm font-medium wrap-break-word;
      @apply [&>span[data-line='']>*]:text-(--shiki-light) dark:[&>span[data-line='']>*]:text-(--shiki-dark);
    }

    :where(blockquote):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply **:text-muted-foreground text-sm leading-6 my-6 border-l-2 pl-6;
    }

    :where(hr):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply my-8 border-t;
    }

    :where(table):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply mx-auto my-6 block max-w-fit overflow-x-auto text-sm;
    }

    :where(thead):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply border-muted-foreground/30 border-b;
    }

    :where(th):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply px-4 py-2 font-medium;
      @apply text-left [[align=center]]:text-center [[align=right]]:text-right;
    }

    :where(tr):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply border-muted-foreground/30 border-y first:border-t-0 last:border-b-0;
    }

    :where(td):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply text-foreground/80 text-sm leading-6 px-4 py-2 align-top wrap-break-word;
      @apply text-left [[align=center]]:text-center [[align=right]]:text-right;
    }

    :where(img, video, figure):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply mx-auto my-6 max-w-full;
    }

    :where(.expressive-code):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply mx-auto my-6 overflow-x-auto;
    }

    :where(pre):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply !max-h-[min(68vh_1000px)] overflow-y-auto [&::-webkit-scrollbar-corner]:hidden max-w-3xl overflow-x-auto;
    }

    :where(summary):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply [&~*]:text-sm [&~*]:leading-6 [&~*>*:first-child]:mt-0! [&~*>*:last-child]:mb-0!;
    }

    :where(kbd):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply text-foreground bg-muted rounded-md border px-2 py-1 text-xs font-medium;
    }

    :where(.katex-display):not(:where([class~='not-prose'], [class~='not-prose'] *)) {
      @apply text-foreground/80 my-6 overflow-x-auto overflow-y-hidden py-2 tracking-normal;
    }
  }
}

@layer utilities {
  .fix-margin {
    @apply [&>*:first-child]:mt-0! [&>*:last-child]:mb-0!;
  }
}

@layer utilities {
  .small {
    @apply text-sm leading-6 [&_code]:text-xs [&_img]:my-4 [&_video]:my-4 [&_figure]:my-4 [&_details]:my-4 [&_blockquote]:my-4 [&_.katex-display]:my-4 [&_.expressive-code]:my-4 [&_li]:mt-0 [&_ol]:mt-0 [&_p]:my-2! [&_ul]:my-0;
  }
}

